src/test/deca/syntax/valid/personal/return.deca
// Description:
//    test minimaliste pour return 
//
// Resultats:
//
//
//
// Historique:
//    cree le 14/01/2025


{
    return 3;
}