src/test/deca/syntax/invalid/personal/return_void.deca
// Description:
//    test minimaliste pour return rien (return doit tjr avoir une expression et rien n est pas une expression)
//
// Resultats:
//erreur
//
//
// Historique:
//    cree le 14/01/2025


{
    return;
}